--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,11 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "yoteiChoice:build:production"
+              "browserTarget": "yoteiChoice:build:production",
+              "assets": [
+                "src/favicon.ico",
+                "src/assets"
+              ]
             },
             "development": {
               "browserTarget": "yoteiChoice:build:development"
